# Timer_LabProgr

./: CMakeLists.txt  Counter.cpp  Counter.h  Data.cpp  Data.h  HEADERS.h  Observer.h  README.md  Subject.h  Time.cpp  Time.h  main.cpp
